--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "next": "15.0.2",
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-calendly": "^4.3.1",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
     "react-slick": "^0.30.2",
+    "resend": "^4.0.1",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -36,6 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
